# efi-template

./: .gitignore  CMakeLists.txt  README.md
scripts/: startup.nsh
src/: main.cc
